# stream

./: CMakeLists.txt  MetadataManager.cpp  MetadataManager.h  main.cpp  main_example.cpp  stream_operator_factory.h  structs.h
genStreams/: genStreams.cpp  genStreams.h
operators/: abstract_stream_operator.h  filter_operator.h  group_operator.h  join_operator.h  order_operator.h  sum_operator.h
